# rokha-sdk

./: .gitignore  CHANGELOG.md  README.md
.github/workflows/: cli-release.yml
docs/: faq.html  get-started.html  identity.html  index.html  introverted-badge.html  leaderboard.html  terms.html  x-integration.html  your-page.html
docs/guides/: feedback.md  mcp-gateway.md  scripted-skills.md
schemas/: README.md  openapi.yaml  rig-template-v1.json
scripts/: install.sh
sdk/python/: pyproject.toml
sdk/python/src/rokha/: __init__.py  client.py  types.py
sdk/typescript/: package-lock.json  package.json
sdk/typescript/src/: agents.ts  cli-auth.ts  client.ts  harnesses.ts  index.ts  llm.ts  marketplace.ts  mcp.ts  rigs.ts  runtime.ts  types.ts  wallets.ts
skills/: README.md
skills/rig-template-audit-brief/: SKILL.md
skills/rig-template-audit-brief/assets/: rig.json
skills/rig-template-explore/: SKILL.md
skills/rig-template-explore/assets/: rig.json
skills/rig-template-full-workflow/: SKILL.md
skills/rig-template-full-workflow/assets/: rig.json
skills/rig-template-write-critique/: SKILL.md
skills/rig-template-write-critique/assets/: rig.json
skills/rokha-audit/: SKILL.md
skills/rokha-audit/references/: audit-harness-schema.md  probe-stdio-mcp.md
skills/rokha-registry/: SKILL.md
svc/rokha-cli/: Cargo.toml  PLAN.md  package.json
svc/rokha-cli/HomebrewFormula/: README.md  rokha.rb
svc/rokha-cli/npm/: install.js
svc/rokha-cli/src/: api_client.rs  audio.rs  browser.rs  config.rs  credentials.rs  gate.rs  main.rs  stream.rs
svc/rokha-cli/src/cli/: agent.rs  agents.rs  auth.rs  compose.yml  config_cmd.rs  mod.rs  stack.rs  status.rs  tools.rs  voice.rs
svc/rokha-cli/src/mcp/: server.rs
svc/rokha-cli/src/tui/: dashboard.rs
