[package]
name = "rokha-cli"
version = "1.0.0"
edition = "2021"
description = "Rokha CLI — thin client for rokha.ai"
license = "MIT"
repository = "https://github.com/aetherBytes/rokha-sdk"

[[bin]]
name = "ro"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["json", "stream"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
ratatui = "0.28"
crossterm = "0.28"
toml = "0.8"
dirs = "5"
base64 = "0.22"
futures-util = "0.3"
# Browser-control plane: drive a local Chrome over the DevTools Protocol (CDP)
# so Rokha can bring up rokha.ai and steer its views from the terminal. Plain
# ws:// to 127.0.0.1 only — no TLS backend pulled in.
tokio-tungstenite = { version = "0.24", default-features = false, features = ["connect", "handshake"] }

# Voice (GIVE_RO_A_VOICE, day-0). Behind the default-on `voice` feature so
# `cargo install rokha-cli --no-default-features` still builds on a box without
# ALSA. The released binaries always carry it (CI installs libasound2-dev on
# Linux; macOS uses CoreAudio, no extra deps). See the MVP doc's Distribution
# section. `ro voice` degrades loud-and-honest if audio init fails at runtime.
cpal = { version = "0.15", optional = true }
rodio = { version = "0.19", optional = true, default-features = false, features = ["symphonia-mp3"] }
hound = { version = "3", optional = true }

[features]
default = ["voice"]
voice = ["dep:cpal", "dep:rodio", "dep:hound"]
